Padding fixes for additional header height to prevent header overlapping body content

--- a/ca_proto/ca_proto/wwwroot/app/views/shared/layouts/master-layout/master.layout.less
+++ b/ca_proto/ca_proto/wwwroot/app/views/shared/layouts/master-layout/master.layout.less
@@ -27,25 +27,25 @@ ng-transclude.main-container{
 
 @media screen and (min-width: 657px) and (max-width:950px){
     ng-transclude.main-container{
-        padding-top: 172px;
+        padding-top: 310px;
     }
 }
 
 @media screen and (min-width: 600px) and (max-width: 656px){
     ng-transclude.main-container{
-        padding-top: 197px;
+        padding-top: 334px;
     }
 }
 
 @media screen and (min-width:418px) and (max-width: 599px){
     ng-transclude.main-container{
-        padding-top: 235px;
+        padding-top: 372px;
     }   
 }
 
 @media screen and (max-width:417px){
     ng-transclude.main-container{
-        padding-top: 257px;
+        padding-top: 398px;
     }
 }
 
